# semantic-rpg

./: Cargo.toml  _prefix.ttl
data/: _prefix.ttl
data/pf2/: _prefix.ttl
data/pf2/sources/: core-rule-book.ttl
schema/: Definition.ttl  Source.ttl  _prefix.ttl
schema/pf2/: Attribute.ttl  Definition.ttl  Source.ttl  _prefix.ttl
skorm-core/: Cargo.toml
skorm-core/src/: lib.rs  ty.rs
skorm-curie/: Cargo.toml
skorm-curie/src/: lib.rs
skorm-iri/: Cargo.toml
skorm-iri/src/: lib.rs  parse.rs  ty.rs
skorm-iri/src/parse/: error.rs  locate.rs
skorm-store/: Cargo.toml
skorm-store/src/: lib.rs  query.rs
skorm-store/src/query/: into_node.rs
skorm-uri/: Cargo.toml
skorm-uri/src/: lib.rs  parse.rs  ty.rs
src/: main.rs  rdf.rs  turtle.rs  walker.rs  writer.rs
src/rdf/: class.rs  prop.rs
src/turtle/: class.rs  graph.rs  parser.rs  prefix_read.rs
src/walker/: doc.rs  error.rs  prefix.rs
src/writer/: error.rs  rdf.rs
