[package]
name = "semantic-rpg"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_enums = "0.6"
curie = "0.1"
evitable = "0.3"
extend = "0.0"
id-arena = { version = "2" }
itertools = "0.8"
nom = "5"
rio_api = "0.3"
rio_turtle = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.1", features = ["parking_lot"] }
skorm-iri = { version = "0.1", path = "./skorm-iri" }
skorm-curie = { version = "0.1", path = "./skorm-curie" }
skorm-store = { version = "0.1", path = "./skorm-store" }

[workspace]
members = ["skorm-curie", "skorm-iri", "skorm-core", "skorm-store"]
