[package]
name = "skorm-core"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skorm-iri = { version = "0.1", path = "../skorm-iri" }
rio_api = "0.3"
