[package]
name = "skorm-iri"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1"
evitable = "0.3"
nom = { version = "5", path = "../../nom" }
