[package]
name = "skorm-store"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skorm-core = { version = "0.1", path = "../skorm-core" }
skorm-iri = { version = "0.1", path = "../skorm-iri" }
skorm-curie = { version = "0.1", path = "../skorm-curie" }
id-arena = { version = "2" }
evitable = "0.5"
